@@ -1,1 +1,1 @@
-__ZN3JSC10JSFunctionC1EPNS_9ExecStateEPNS_14JSGlobalObjectEPNS_9StructureEiRKNS_10IdentifierEPFxS2_E
+__ZN3JSC12JSGlobalData15getHostFunctionEPFxPNS_9ExecStateEE
